<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="add_room">Nuevo ambiente</string>
    <string name="add_type_title">Nuevo tipo de ambiente</string>
    <string name="app_name">Estate Quoter v0.4</string>
    <string name="action_settings">Configuración</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_save">Guardar</string>
    <string name="empty_list">Lista vacía: use el menú para agregar un ambiente</string>
    <string name="floors">Pisos:</string>
    <string name="hint_dimension_room">Ingrese medida en metros</string>
    <string name="hint_image">La imagen se mostrará aquí</string>
    <string name="house_create_notice">Propiedad creada</string>
    <string name="house_create_title">Creando nueva propiedad</string>
    <string name="house_delete_confirm">¿Está seguro de que desea eliminar esta propiedad?</string>
    <string name="house_delete_notice">Propiedad eliminada</string>
    <string name="house_delete_title">Borrar propiedad</string>
    <string name="house_edit_notice">Propiedad modificada</string>
    <string name="house_edit_title">Editando propiedad</string>
    <string name="menu_cancel">Cancelar</string>
    <string name="menu_create_house">Nueva propiedad</string>
    <string name="menu_delete">Borrar</string>
    <string name="menu_edit">Editar</string>
    <string name="menu_preferences">Preferencias</string>
    <string name="menu_save">Guardar</string>
    <string name="menu_view">Vista rápida</string>
    <string name="label_check_confirmed">Confirmada</string>
    <string name="label_house_address">Dirección</string>
    <string name="label_house_rooms">Ambientes</string>
    <string name="label_house_rating">Calidad</string>
    <string name="label_property_price">Precio</string>
    <string name="label_property_operation">Tipo de operación</string>
    <string name="label_property_type">Tipo de propiedad</string>
    <string name="label_property_services">Servicios</string>
    <string name="label_pick_owner">Elegir propietario</string>
    <string name="title_activity_house_detail">Detalles de la propiedad</string>
    <string name="title_activity_house_location">Ubicación</string>
    <string name="menu_location">Ver ubicación en mapa</string>
    <string name="display_name">Nombre:</string>
    <string name="room_delete_confirm">¿Está seguro de que desea eliminar este ambiente?</string>
    <string name="room_delete_notice">Ambiente eliminado</string>
    <string name="room_delete_title">Borrar ambiente</string>
    <string name="room_type">Tipo de ambiente</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancelar</string>
    <string name="label_prop_type">Tipo</string>
    <string name="new_prop_type">Nuevo tipo</string>
    <string name="hint_imgDisplayImage">Vista frontal de la propiedad</string>
    <string name="menu_room_add_type">Add room type</string>
    <string name="menu_create_room">Nuevo ambiente</string>
    <string name="location_search">Buscar ubicación</string>
    <string name="hint_address_search">Ingrese aquí la dirección</string>
    <string name="menu_pick_city">Elegir ciudad activa</string>
    <string name="label_built_surface">Superficie cubierta: </string>
    <string name="label_parcel_surface">Superficie de lote: </string>
    <string name="menu_view_zones">Ver zonificación</string>
    <string name="menu_add_zone">Nueva zona</string>
    
    <!-- THE FOLLOWING STRINGS WERE IMPORTED FROM THE WIZARD TUTORIAL -->
   
    <string name="app_name">Place Order</string>

    <string name="next">Next</string>
    <string name="prev">Previous</string>
    <string name="finish">Submit order</string>
    <string name="review">Review</string>

    <string name="label_your_name">Name</string>
    <string name="label_your_email">Email</string>
    <string name="hint_your_name">e.g. Larry</string>
    <string name="hint_your_email">Optional</string>

    <string name="submit_confirm_message">Place the order with the deli? You will receive an email
        confirmation.</string>
    <string name="submit_confirm_button">Place order</string>
   
</resources>
